# hackathon

./: run.sh
measurements/: cpu-samples.csv  energy-samples.csv  hackathon.ipynb  pyproject.toml
measurements/measurements/: measure_factorial.py
