[tool.poetry]
name = "measurements"
version = "0.1.0"
description = ""
authors = ["Robin Ohs"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.0"
cpufreq = "^0.3.5"
psutil = "^6.0.0"
pandas = "^2.2.2"
pyjoules = "^0.5.1"
tqdm = "^4.66.5"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
